# NoSQL

./: .gitignore  CMakeLists.txt  Doxyfile
documentations/: index.dox  on-disk_storage.md
includes/: NoSQL.h  primitiveStorage.h
sources/: NoSQL.cpp  main.cpp  primitiveStorage.cpp
tests/: test_primitiveStorage.cpp
